--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test:debug": "ng test --browsers Chrome_with_debugging",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
