Update gh pages script and routing

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:debug": "ng test --browsers Chrome_with_debugging",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "gh-pages": "ng build --prod --base-href “https://corwinm.github.io/angular-playground/”"
+    "gh-pages": "ng build --prod --base-href /angular-playground/ && angular-cli-ghpages"
   },
   "private": true,
   "dependencies": {
