--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "debug.toolBarLocation": "docked"
+  "debug.toolBarLocation": "docked",
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/bower_components": true,
+    "/dist": true
+  }
 }
