--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "angular-playground",
-  "short_name": "angular-playground",
+  "name": "NG-Playground",
+  "short_name": "NGPlayground",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
+  "scope": "/angular-playground/",
+  "start_url": "/angular-playground/",
   "icons": [
     {
       "src": "assets/icons/icon-72x72.png",
