--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,8 @@ phases:
   install:
     commands:
       - git config --global credential.helper 'cache --timeout=3600'
+      - git config --global user.name $USERNAME
+      - git config --global user.password $TOKEN
       - echo npm install
       - npm install
   pre_build:
