--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,6 @@ version: 0.2
 phases:
   install:
     commands:
-      - git config --global credential.helper 'cache --timeout=3600'
-      - git config --global user.name "$USERNAME"
-      - git config --global user.password "$TOKEN"
       - echo npm install
       - npm install
   pre_build:
@@ -14,6 +11,8 @@ phases:
   build:
     commands:
       - echo Build started on `date`
+      - git config user.name $USERNAME
+      - git config user.password $TOKEN
       - npm run gh-pages
   post_build:
     commands:
