--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
+      - git --version
       - git config user.name $USERNAME
       - git config user.password $TOKEN
       - npm run gh-pages
