--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
     commands:
       - echo Build started on `date`
       - git --version
-      - sudo git config --global user.name $USERNAME
+      - sudo git config --global user.email $USERNAME
       - sudo git config --global user.name "AWS CodeBuild"
       - sudo git config --global user.password $TOKEN
       - sudo npm run gh-pages
