--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,10 +17,12 @@ phases:
     commands:
       - echo Build started on `date`
       - git --version
-      - git remote set-url https://corwinm:$TOKEN@github.com/corwinm/angular-playground.git
+      #- git remote set-url https://corwinm:$TOKEN@github.com/corwinm/angular-playground.git
       #- git config --global user.email "$USERNAME"
       #- git config --global user.name "$USERNAME"
       #- git config --global user.password "$TOKEN"
+      - npm run build
+      - ngh --repo=https://corwinm:$TOKEN@github.com/corwinm/angular-playground.git
       - npm run gh-pages
   post_build:
     commands:
