--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,8 +22,8 @@ phases:
       #- git config --global user.name "$USERNAME"
       #- git config --global user.password "$TOKEN"
       - npm run build
-      - ngh --repo=https://corwinm:$TOKEN@github.com/corwinm/angular-playground.git
-      - npm run gh-pages
+      - npm run gh-pages -- --repo=https://corwinm:$TOKEN@github.com/corwinm/angular-playground.git
+      #- npm run gh-pages
   post_build:
     commands:
       - echo Build completed on `date`
