--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,9 +18,9 @@ phases:
       - echo Build started on `date`
       - git --version
       #- git remote set-url https://corwinm:$TOKEN@github.com/corwinm/angular-playground.git
-      #- git config --global user.email "$USERNAME"
-      #- git config --global user.name "$USERNAME"
-      #- git config --global user.password "$TOKEN"
+      - git config --global user.email "$USERNAME"
+      - git config --global user.name "$USERNAME"
+      - git config --global user.password "$TOKEN"
       - npm run build
       - npm run gh-pages -- --repo=https://corwinm:$TOKEN@github.com/corwinm/angular-playground.git
       #- npm run gh-pages
