--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 env:
   parameter-store:
     USERNAME: "GitHubUser"
-    TOKEN: "GitHubToken"
+    GH_TOKEN: "GitHubToken"
 
 phases:
   install:
@@ -21,7 +21,7 @@ phases:
       # - git config --global user.name "$USERNAME"
       # - git config --global user.password "$TOKEN"
       - npm run build
-      - npm run gh-pages -- --repo=https://corwinm:$TOKEN@github.com/corwinm/angular-playground.git --name="CodeBuild" --email=$USERNAME
+      - npm run gh-pages -- --repo=https://corwinm:GH_TOKEN@github.com/corwinm/angular-playground.git --name="CodeBuild" --email=$USERNAME
   post_build:
     commands:
       - echo Build completed on `date`
