--- a/angular.json
+++ b/angular.json
@@ -97,6 +97,11 @@
             "styles": [
               "src/styles.css"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "./src/scss"
+              ]
+            },
             "scripts": [],
             "assets": [
               "src/favicon.ico",
