--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -8,7 +8,8 @@
         "/favicon.ico",
         "/index.html",
         "/*.css",
-        "/*.js"
+        "/*.js",
+        "/assets/**"
       ]
     }
   }, {
@@ -17,7 +18,8 @@
     "updateMode": "prefetch",
     "resources": {
       "files": [
-        "/assets/**"
+        "/assets/**",
+        "https://cataas.com/cat/"
       ]
     }
   }]
